Fixing width issue and scrollbar issue on suggestions on mac (#2075)
## Context

Virtual tables weren't rendered properly on mac where the scrollbars
have different sizes.

## Proposed solution

- Adding a static space of 13px for scrollbars on all platforms. This
was tested on Chrome/FF Linux/Windows/Mac and looks reasonable well
- Fixing border issue (not related to the scrollbar). Border was cat
halfway on wider tables.

## Has this been tested?

Manual tests only

--- a/app/client/components/ViewLayout.css
+++ b/app/client/components/ViewLayout.css
@@ -89,10 +89,6 @@
   border: 1px solid var(--grist-theme-widget-border, var(--grist-color-dark-grey));
 }
 
-.diff .view_data_pane_container {
-  border: none;
-}
-
 @media not print {
 .active_section > .view_data_pane_container {
   box-shadow: -2px 0 0 0px var(--grist-theme-widget-active-border, var(--grist-color-light-green));
